--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
-  "name": "go",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+    "name": "go",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prettier": "prettier --write . --ignore-path .gitignore --ignore-path .eslintignore",
+        "prepare": "husky",
+        "test": "vitest",
+        "test:watch": "vitest --watch",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --coverage"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
+        "axios": "^1.7.2",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.408.0",
+        "next": "14.2.5",
+        "next-themes": "^0.3.0",
+        "prettier": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.52.1",
+        "tailwind-merge": "^2.4.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.5",
+        "husky": "^9.0.11",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5",
+        "vite-plugin-svgr": "^4.2.0",
+        "vite-tsconfig-paths": "^4.3.2",
+        "vitest": "^2.0.3"
+    }
 }
