--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@vitest/coverage-v8": "^2.0.3",
+        "@vitest/ui": "^2.0.3",
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "husky": "^9.0.11",
