--- a/package.json
+++ b/package.json
@@ -16,15 +16,25 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-checkbox": "^1.1.1",
+        "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-select": "^2.1.1",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.0",
+        "@tanstack/react-table": "^8.19.3",
         "axios": "^1.7.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "framer-motion": "^11.3.6",
         "lucide-react": "^0.408.0",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.5",
         "react": "^18",
+        "react-custom-scrollbars-2": "^4.5.0",
         "react-dom": "^18",
         "react-hook-form": "^7.52.1",
         "tailwind-merge": "^2.4.0",
