--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@tanstack/react-query": "^5.51.9",
         "@tanstack/react-table": "^8.19.3",
         "axios": "^1.7.2",
         "class-variance-authority": "^0.7.0",
@@ -37,6 +38,7 @@
         "react-custom-scrollbars-2": "^4.5.0",
         "react-dom": "^18",
         "react-hook-form": "^7.52.1",
+        "sonner": "^1.5.0",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
