--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@tailwindcss/container-queries": "^0.1.1",
         "@tanstack/react-query": "^5.51.9",
         "@tanstack/react-table": "^8.19.3",
         "axios": "^1.7.2",
