--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
         "react-custom-scrollbars-2": "^4.5.0",
         "react-dom": "^18",
         "react-hook-form": "^7.52.1",
+        "sharp": "^0.33.4",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@testing-library/react": "^16.0.0",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
@@ -54,6 +56,7 @@
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "husky": "^9.0.11",
+        "jsdom": "^24.1.0",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5",
