feat: Improved Accessibility and Integration Tests

--- a/package.json
+++ b/package.json
@@ -24,20 +24,21 @@
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
         "@tailwindcss/container-queries": "^0.1.1",
-        "@tanstack/react-query": "^5.51.9",
+        "@tanstack/react-query": "^5.51.11",
         "@tanstack/react-table": "^8.19.3",
         "axios": "^1.7.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "framer-motion": "^11.3.6",
+        "framer-motion": "^11.3.8",
         "lucide-react": "^0.408.0",
+        "msw": "^2.3.2",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.5",
-        "react": "^18",
+        "react": "^18.3.1",
         "react-custom-scrollbars-2": "^4.5.0",
-        "react-dom": "^18",
+        "react-dom": "^18.3.1",
         "react-hook-form": "^7.52.1",
         "sharp": "^0.33.4",
         "sonner": "^1.5.0",
@@ -46,20 +47,22 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@testing-library/dom": "^10.3.2",
         "@testing-library/react": "^16.0.0",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/node": "^20.14.11",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
         "@vitest/coverage-v8": "^2.0.3",
         "@vitest/ui": "^2.0.3",
-        "eslint": "^8",
+        "axios-mock-adapter": "^1.22.0",
+        "eslint": "^8.57.0",
         "eslint-config-next": "14.2.5",
-        "husky": "^9.0.11",
+        "husky": "^9.1.1",
         "jsdom": "^24.1.0",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5",
+        "postcss": "^8.4.39",
+        "tailwindcss": "^3.4.6",
+        "typescript": "^5.5.3",
         "vite-plugin-svgr": "^4.2.0",
         "vite-tsconfig-paths": "^4.3.2",
         "vitest": "^2.0.3"
